<resources>
    <string name="English">Value</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="account_info_etc">Account Status, Active Connections etc...</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_username">Username:</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">Activation Code</string>
    <string name="active_channel">Loading…</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">ALL</string>
    <string name="all_channel">Show All Channels</string>
    <string name="app_id">BC434648</string>
    <string name="app_name">xtream-iptv-player-v3</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="back_button">Back</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bt_save">SUBMIT</string>
    <string name="bt_submit">SAVE</string>
    <string name="can_not_play">can not play this video</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_small">Cancel</string>
    <string name="cast">Cast</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="channel_name">Channel Name</string>
    <string name="channels_with_epg">Show Channels only with EPG</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="client_username">Username</string>
    <string name="close">Close</string>
    <string name="closeDrawer">close</string>
    <string name="close_ticket">CLOSE</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_procees">Do you want to proceed ?</string>
    <string name="confirm_refresh">Confirm to Refreshing...</string>
    <string name="credential_detail">Enter your Login Details</string>
    <string name="daily_update">Auto-Update Channels &amp; VOD daily</string>
    <string name="date_time">22:00</string>
    <string name="diected_by">Directed By:</string>
    <string name="director">Director:</string>
    <string name="disable">Disable</string>
    <string name="drawer_account_info">ACCOUNT INFO</string>
    <string name="drawer_home">HOME</string>
    <string name="drawer_live_tv">LIVE TV</string>
    <string name="drawer_open">menu_toggle</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_support">SUPPORT</string>
    <string name="drawer_vod">VIDEO ON DEMAND</string>
    <string name="enable">Enable</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="font_family_bold">sans-serif-bold</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="live_tv">LIVE TV</string>
    <string name="load_channels_vod_series">Refresh Channels, VOD and Series</string>
    <string name="load_tv_guide">Refresh TV Guide</string>
    <string name="menu_account_info">Account Info</string>
    <string name="menu_archive">TV Archive</string>
    <string name="menu_home">Home</string>
    <string name="menu_live_tv">Live TV</string>
    <string name="menu_live_tv_guide">Live TV with Guide</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_series">Series</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_vod">Video On Demand</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_stream_found">No Channel Found</string>
    <string name="no_video_found">No Video Found</string>
    <string name="parental_password">Parental Password</string>
    <string name="please_input_password">Enter Your Password</string>
    <string name="search">Search</string>
    <string name="set_parental_password">Set Parental Password</string>
    <string name="sort_atoz">A-Z</string>
    <string name="sort_default">Default</string>
    <string name="sort_last_added">Top Added</string>
    <string name="sort_ztoa">Z-A</string>
    <string name="view_Linear">List View</string>
    <string name="view_grid">Grid View</string>
</resources>