<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
	android:checkableBehavior="single">
        <item

	android:icon="@drawable/home"

	android:id="@id/nav_home"

	android:title="@string/menu_home" />
        <item

	android:icon="@drawable/livetv_icon"

	android:id="@id/nav_live_tv"

	android:title="@string/menu_live_tv" />
        <item

	android:icon="@drawable/guide_icon"

	android:id="@id/nav_live_tv_guide"

	android:title="@string/menu_live_tv_guide" />
        <item

	android:icon="@drawable/account_info"

	android:id="@id/nav_account_info"

	android:title="@string/menu_account_info" />
        <item

	android:icon="@drawable/vod_icon"

	android:id="@id/nav_vod"

	android:title="@string/menu_vod" />
        <item

	android:icon="@drawable/vod_icon"

	android:id="@id/nav_series"

	android:visible="true"

	android:title="@string/menu_series" />
        <item

	android:icon="@drawable/tv_archive"

	android:id="@id/nav_archive"

	android:title="@string/menu_archive" />
        <item

	android:icon="@drawable/settings_icon"

	android:id="@id/nav_settings"

	android:title="@string/menu_settings" />
        <item

	android:icon="@drawable/logout_icon"

	android:id="@id/nav_logout"

	android:title="@string/menu_logout" />
    </group>
</menu>