<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

	android:icon="@drawable/search_view"

	android:id="@id/action_search"

	android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item

	android:icon="@drawable/menu_dots"

	android:id="@id/empty"

	android:orderInCategory="101"

	android:title="inner"
        app:showAsAction="always">
        <menu>
            <item

	android:icon="@drawable/logout_icon_menu"

	android:id="@id/action_logout1"

	android:orderInCategory="100"

	android:title="@string/menu_logout" />
            <item

	android:icon="@drawable/listview_menu"

	android:id="@id/layout_view_linear"

	android:visible="true"

	android:title="@string/view_Linear" />
            <item

	android:icon="@drawable/gridview_menu"

	android:id="@id/layout_view_grid"

	android:visible="true"

	android:title="@string/view_grid" />
            <item

	android:icon="@drawable/livetv_icon_menu"

	android:id="@id/menu_load_channels_vod1"

	android:title="@string/load_channels_vod_series" />
            <item

	android:icon="@drawable/guide_icon_menu"

	android:id="@id/menu_load_tv_guide1"

	android:title="@string/load_tv_guide" />
            <item

	android:icon="@drawable/ic_menu_send"

	android:id="@id/menu_sort"

	android:visible="false"

	android:title="SORT" />
        </menu>
    </item>
</menu>