<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:orientation="vertical"
	android:id="@id/rl_password_verification"
	android:background="@color/dark_black2"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
	android:background="@color/white"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_margin="20.0dip"
	android:layout_centerInParent="true">
        <RelativeLayout
	android:id="@id/ll_expandable"
	android:background="@color/white"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="20.0dip">
            <TextView
	android:textSize="20.0dip"
	android:textColor="@color/black"
	android:id="@id/tv_parental_password"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="@string/parental_password"
	android:drawableLeft="@drawable/parental_password_lock"
	android:drawablePadding="7.0dip"
	android:fontFamily="@string/font_family_medium" />><ImageView
	android:id="@id/iv_div"
	android:background="@color/black"
	android:layout_width="fill_parent"
	android:layout_height="2.0px"
	android:layout_marginTop="15.0dip"
	android:layout_below="@id/tv_parental_password" />
            <EditText
	android:textColorHint="@color/white"
	android:id="@id/et_password"
	android:background="@drawable/selector_verify_password_fields"
	android:paddingLeft="10.0dip"
	android:focusable="true"
	android:nextFocusDown="@id/bt_save_password"
	android:layout_width="fill_parent"
	android:layout_height="45.0dip"
	android:layout_marginLeft="25.0dip"
	android:layout_marginTop="45.0dip"
	android:layout_marginRight="25.0dip"
	android:layout_marginBottom="10.0dip"
	android:hint="@string/please_input_password"
	android:layout_below="@id/tv_parental_password"
	android:inputType="numberPassword"
	android:fontFamily="@string/font_family_regular" />
            <Button
	android:textColor="@drawable/selector_save_color"
	android:id="@id/bt_save_password"
	android:background="@drawable/selector_save_button"
	android:focusable="true"
	android:nextFocusRight="@id/bt_close"
	android:nextFocusUp="@id/et_password"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:layout_marginTop="15.0dip"
	android:layout_marginRight="25.0dip"
	android:layout_marginBottom="20.0dip"
	android:text="@string/bt_save"
	android:layout_below="@id/et_password" />
            <Button
	android:textColor="@drawable/selector_save_color"
	android:id="@id/bt_close"
	android:background="@drawable/selector_save_button"
	android:nextFocusLeft="@id/bt_save_password"
	android:nextFocusUp="@id/et_password"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="15.0dip"
	android:layout_marginRight="25.0dip"
	android:layout_marginBottom="20.0dip"
	android:text="@string/close"
	android:layout_below="@id/et_password"
	android:layout_alignParentEnd="true" />
        </RelativeLayout>></RelativeLayout>
</RelativeLayout>