<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:orientation="vertical"
	android:id="@id/rl_password_prompt"
	android:background="@color/dark_black2"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerInParent="true">
        <android.support.v7.widget.CardView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_margin="20.0dip">
            <RelativeLayout
	android:background="@color/white"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
                <RelativeLayout
	android:id="@id/ll_expandable"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="20.0dip">
                    <TextView
	android:textSize="20.0dip"
	android:textColor="@color/black"
	android:id="@id/tv_parental_password"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="Sort According to : "
	android:drawableLeft="@drawable/sort"
	android:drawablePadding="7.0dip"
	android:fontFamily="@string/font_family_medium" />><ImageView
	android:id="@id/iv_div"
	android:background="@color/black"
	android:layout_width="fill_parent"
	android:layout_height="2.0px"
	android:layout_marginTop="15.0dip"
	android:layout_below="@id/tv_parental_password" />
                    <RadioGroup
	android:id="@id/rg_radio"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="20.0dip"
	android:layout_below="@id/iv_div">
                        <RadioButton
	android:textSize="18.0dip"
	android:textColor="@color/black"
	android:id="@id/rb_normal"
	android:padding="10.0dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="@string/sort_default" />
                        <RadioButton
	android:textSize="18.0dip"
	android:textColor="@color/black"
	android:id="@id/rb_lastadded"
	android:padding="10.0dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="@string/sort_last_added" />
                        <RadioButton
	android:textSize="18.0dip"
	android:textColor="@color/black"
	android:id="@id/rb_atoz"
	android:padding="10.0dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="@string/sort_atoz" />
                        <RadioButton
	android:textSize="18.0dip"
	android:textColor="@color/black"
	android:id="@id/rb_ztoa"
	android:padding="10.0dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:text="@string/sort_ztoa" />
                    </RadioGroup>
                    <Button
	android:textColor="@drawable/selector_save_color"
	android:id="@id/bt_save_password"
	android:background="@drawable/selector_save_button"
	android:focusable="true"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:layout_marginTop="10.0dip"
	android:layout_marginBottom="20.0dip"
	android:text="@string/bt_submit"
	android:layout_below="@id/rg_radio" />><Button
	android:textColor="@drawable/selector_save_color"
	android:id="@id/bt_close"
	android:background="@drawable/selector_save_button"
	android:focusable="true"
	android:nextFocusLeft="@id/bt_save_password"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="25.0dip"
	android:layout_marginTop="10.0dip"
	android:layout_marginRight="25.0dip"
	android:layout_marginBottom="20.0dip"
	android:text="@string/close"
	android:layout_below="@id/rg_radio"
	android:layout_alignParentEnd="true" />></RelativeLayout>
            </RelativeLayout>></android.support.v7.widget.CardView>></RelativeLayout>
</RelativeLayout>