<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:background="@color/light_gray"
	android:paddingLeft="4.0dip"
	android:paddingTop="4.0dip"
	android:paddingRight="4.0dip"
	android:paddingBottom="4.0dip"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
	android:id="@id/tv_view_provider"
	android:visibility="invisible"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:text="linearView" />
    <android.support.v7.widget.RecyclerView
	android:id="@id/my_recycler_view"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" />
    <TextView
	android:textSize="30.0dip"
	android:gravity="center"
	android:id="@id/tv_noStream"
	android:visibility="invisible"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="60.0dip"
	android:text="@string/no_video_found"
	android:layout_centerHorizontal="true"
	android:fontFamily="@string/font_family_thin"
	android:textAlignment="center" />
    <ProgressBar
	android:id="@id/pb_loader"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="50.0dip"
	android:indeterminate="true"
	android:layout_below="@id/sliding_tabs"
	android:layout_centerHorizontal="true" />
    <TextView
	android:textSize="30.0dip"
	android:gravity="center"
	android:id="@id/tv_no_record_found"
	android:visibility="gone"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="60.0dip"
	android:text="@string/no_record_found"
	android:layout_centerHorizontal="true"
	android:fontFamily="@string/font_family_thin" />
</RelativeLayout>